ghc-4335c07/testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardInTypeSplice2.hs
{-# LANGUAGE TemplateHaskell, PartialTypeSignatures  #-}
module ExtraConstraintsWildcardInTypeSplice2 where

import Language.Haskell.TH.Lib (wildCardT)

show' :: $(wildCardT) => a -> String
show' x = show x
