ghc-4335c07/testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardInTypeSplice2.stderr

ExtraConstraintsWildcardInTypeSplice2.hs:6:12: error:
    Wildcard ‘_’ not allowed
      in the spliced type ‘_’
    In the untyped splice: $wildCardT
